# group_15

./: .gitignore  Bank_App_Presentation_Group_15.pptx  Bank_App_Presentation_Group_15_dynamic.key  LICENSE  README.md  taskit.xlsx
.github/workflows/: build_and_deploy.yml  build_macOS.yml  build_windows.yml  release_macOS.yml  release_windows.yml  release_windows_macOS.yml
backend/: .env  .env.example  app.js  create_secret.js  database.js  package-lock.json  package.json
backend/middleware/: auth.js
backend/models/: account_access_model.js  account_model.js  card_model.js  login_model.js  transaction_model.js  user_model.js
backend/routes/: account.js  account_access.js  card.js  currency.js  database.js  index.js  login.js  transaction.js  user.js
bank-automat/: CMakeLists.txt  CMakeLists.txt.user.24d31b3  appicon.rc  balance.cpp  balance.h  balance.ui  bank-automat.iss  bankicon.icns  clientinfo.cpp  clientinfo.h  clientinfo.ui  currency.cpp  currency.h  currency.ui  debitvscredit.cpp  debitvscredit.h  debitvscredit.ui  deposit.cpp  deposit.h  deposit.ui  environment.cpp  environment.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.cpp  menu.h  menu.ui  receipt.cpp  receipt.h  receipt.ui  style.qss  transactionhistory.cpp  transactionhistory.h  transactionhistory.ui  transfer.cpp  transfer.h  transfer.ui  withdraw.cpp  (+2 more)
database/: bank_model.mwb  db_client_scenarios.sql  db_setup.sql  db_setup.txt  init_bank.sql  sql_script_mariadb_version.sql  sql_script_mariiadb_version.sql  sql_script_mysql_version.sql  team_setup.sql  team_setup.txt  team_setup_DELETE LATER.sql  team_setup_DELETE_LATER.txt
models/: user_model.js
